--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,11 +18,7 @@
         </activity>
 
         <service
-            android:name=".FlagReader"
-            android:enabled="true"
-            android:exported="true" />
-        <service
-            android:name="com.example.nicok.pathguide.BeaconService"
+            android:name="com.nicok.pathguide.services.BeaconService"
             android:enabled="true"
             android:exported="true"></service>
     </application>
