--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,10 +24,10 @@
             </intent-filter>
         </activity>
 
-        <!--<service-->
-            <!--android:name="com.nicok.pathguide.services.BeaconService"-->
-            <!--android:enabled="true"-->
-            <!--android:exported="true" />-->
+        <service
+            android:name="com.nicok.pathguide.services.BeaconService"
+            android:enabled="true"
+            android:exported="true" />
     </application>
 
 </manifest>
