--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,17 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
+    }
+
 }
 
 
@@ -35,4 +46,5 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.7'
     implementation 'com.estimote:proximity-sdk:1.0.3'
     implementation 'com.estimote:mustard:0.2.1'
+    implementation 'org.springframework.android:spring-android-rest-template:2.0.0.M3'
 }
