--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:usesCleartextTraffic="true"
         android:theme="@style/AppTheme">
         <activity
+            android:screenOrientation="portrait"
             android:name=".MainActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         >
@@ -23,8 +24,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DestinationActivity" android:label="@string/destination_title" />
-        <activity android:name=".CurrentLocationActivity" android:label="@string/current_location_title" />
+        <activity android:screenOrientation="portrait" android:name=".DestinationActivity" android:label="@string/destination_title" />
+        <activity android:screenOrientation="portrait" android:name=".CurrentLocationActivity" android:label="@string/current_location_title" />
 
         <service android:name="com.nicok.pathguide.services.AppPathGuideService" />
     </application>
